# Moddy

./: .eslintignore  .eslintrc.json  .gitignore  .gitmodules  README.md  docs-lock.json  docs.json  io.github.charlieqle.GnomeTypescriptTemplate.json  io.github.charlieqle.Moddy.json  meson.build  meson_options.txt  package.json  rollup.config.js  tsconfig.json
.github/workflows/: build-flatpak.yml
data/: io.github.charlieqle.GnomeTypescriptTemplate.appdata.xml.in  io.github.charlieqle.GnomeTypescriptTemplate.desktop.in  io.github.charlieqle.GnomeTypescriptTemplate.gschema.xml  io.github.charlieqle.Moddy.appdata.xml.in  io.github.charlieqle.Moddy.desktop.in  io.github.charlieqle.Moddy.gschema.xml  meson.build
data/data/presets/: Fallout 4 VR.json  Fallout 4.json  Skyrim Special Edition.json  SkyrimVR.json
data/resources/: io.github.charlieqle.GnomeTypescriptTemplate.data.gresource.xml  io.github.charlieqle.Moddy.data.gresource.xml  meson.build
data/resources/ui/: directory-entry-row.blp  game-row.blp  mod-preferences-window.blp  mod-row.blp  preferences-window.blp  profile-create-window.blp  profile-preferences-window.blp  window.blp
data/resources/ui/views/: add-game-view.blp  game-view.blp  home-view.blp
docs/: configfiles.md  folderstructure.md
modules/blueprint-compiler/: blueprint-compiler.json
modules/gnome-autoar/: gnome-autoar.json
modules/yarn-deps/: generated-sources.json  yarn-deps.json
po/: POTFILES
scripts/: fedora-dependencies.sh  flatpak-dependencies.sh  generate-sources.sh
src/: actionHandler.ts  application.ts  config.ts  gamePreset.ts  gsettings.ts  io.github.charlieqle.GnomeTypescriptTemplate.src.gresource.xml  io.github.charlieqle.Moddy.src.gresource.xml  main.ts  meson.build  steam.ts  utility.ts
src/backend/: game.ts  mod.ts  profile.ts
src/widgets/: directoryEntryRow.ts  gameRow.ts  modPreferencesWindow.ts  modRow.ts  preferencesWindow.ts  profileCreateWindow.ts  profilePreferencesWindow.ts  window.ts
src/widgets/views/: addGameView.ts  gameView.ts  homeView.ts
